@@ -1,6 +1,7 @@
 - Next version:
   * Add incremental decoding support for images containing ALPH and ICCP chunks.
   * New function: WebPMuxGetCanvasSize
+  * BMP and TIFF format output added to 'dwebp'
 
 - 3/20/13: version 0.3.0
   This is a binary compatible release.
